# md-converter

./: .gitignore  Dockerfile  app.py  pyproject.toml  render.yaml  requirements.txt
converters/: __init__.py  audio.py  base.py  csv_conv.py  docx.py  epub.py  html.py  image.py  json_conv.py  pdf.py  pptx.py  web.py  xlsx.py  xml_conv.py
static/: app.js  style.css
templates/: index.html
utils/: markdown_clean.py  mime_detect.py
